--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,8 +26,10 @@
     },
     "dependencies": {
         "@nestjs/common": "^10.0.0",
+        "@nestjs/config": "^4.0.0",
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
+        "@prisma/client": "^6.3.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
@@ -41,6 +43,7 @@
         "@types/source-map-support": "^0",
         "@types/supertest": "^2.0.12",
         "jest": "^29.5.0",
+        "prisma": "^6.3.1",
         "source-map-support": "^0.5.21",
         "supertest": "^6.3.3",
         "ts-jest": "^29.1.0",
