--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -30,6 +30,9 @@
         "@nestjs/core": "^10.0.0",
         "@nestjs/platform-express": "^10.0.0",
         "@prisma/client": "^6.3.1",
+        "argon2": "^0.41.1",
+        "class-transformer": "^0.5.1",
+        "class-validator": "^0.14.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
