--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -28,11 +28,16 @@
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^4.0.0",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/jwt": "^11.0.0",
+        "@nestjs/passport": "^11.0.5",
         "@nestjs/platform-express": "^10.0.0",
+        "@nestjs/schedule": "^5.0.1",
         "@prisma/client": "^6.3.1",
         "argon2": "^0.41.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "passport": "^0.7.0",
+        "passport-jwt": "^4.0.1",
         "reflect-metadata": "^0.1.13",
         "rxjs": "^7.8.1"
     },
@@ -43,6 +48,8 @@
         "@types/express": "^4.17.17",
         "@types/jest": "^29.5.2",
         "@types/node": "^20.3.1",
+        "@types/passport": "^0",
+        "@types/passport-jwt": "^4",
         "@types/source-map-support": "^0",
         "@types/supertest": "^2.0.12",
         "jest": "^29.5.0",
