--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -19,9 +19,12 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hookform/resolvers": "^5.0.0",
         "next": "15.2.3",
         "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "react-dom": "^19.0.0",
+        "react-hook-form": "^7.55.0",
+        "zod": "^3.24.2"
     },
     "devDependencies": {
         "@types/node": "^20",
